Fixed whitespacing on red button

--- a/app/themes/mcc-cycling/assets/less/app.less
+++ b/app/themes/mcc-cycling/assets/less/app.less
@@ -134,6 +134,7 @@ body {
   -moz-border-radius: 5px;
   -o-border-radius: 5px;
   border-radius: 5px;
+  white-space: normal;
   -webkit-transition: opacity 0.1s ease-in-out;
   -moz-transition: opacity 0.1s ease-in-out;
   -o-transition: opacity 0.1s ease-in-out;
